modules/security_groups/main.tf
provider "aws" {
  region = "us-east-1"  # Change to your desired region
}

resource "aws_security_group" "web_server_sg" {
  name        = "test-vpc-sg"
  description = "SSH and HTTP access"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "test-vpc-sg"
  }
}
